assets/static/style.css
body {
    background: #fffff9;
    color: #333;
}

nav a[rel='next']::after {
    content: ' \276D';
}

.page {
    padding: 0;
}

.main .content, .articles .content {
    padding: 3em 1em 5em;
}

.main #title {
    padding: 8em 0 21em 0;
}

.main .heading, .articles .heading, .section-header  {
    text-align: center;
}

.main .heading span {
    display: block;
    line-height: 75%;
}

.article .content {
    padding: 1em;
    max-width: 60em;
    margin: auto;
}

header.single-article {
    padding-top: 0;
    padding-bottom: 0;
    margin-bottom: 3em;
}

header.single-article h2 {
    font-size: 3em;
}

.article-banner {
    width: 100%;
    margin-bottom: 1em;
}

article footer {
    margin-top: 3em;
}

.posts .gallery-item {
    margin-bottom: 3em;
}

.posts a {
    color: inherit;
}

.gallery-item img {
    width: 100%;
}

article.gallery-item img {
    margin-bottom: 0.5em;
}

.section-header h1 {
    display: inline-block;
    padding-bottom: 0.125em;
    border-bottom: 1px solid black;
}

.section-header {
    margin-bottom: 2em;
}

footer #copyright {
    text-align: right;
    margin-top: 3em;
    margin-bottom: 0;
}

footer#contact {
    background-color: #ffc;
    padding: 3em 1em 0;
}

footer#contact > ul {
    margin-bottom: 2em;
}

footer#contact {
    border-top: 1px solid black;
}

.centered {
    margin: auto;
}

article .dek {
     font-size: 1.25em;
}

#top-nav {
    background: #fffff9f0;
    width: 100%;
}

#top-nav a {
    color: inherit;
}

.article #top-nav {
    position: fixed;
    top: -4em;
    transition: top 0.3s;
    padding-left: 1em;
}

@media (min-width: 768px) {

    .gallery {
        display: flex;
        flex-flow: row wrap;
        justify-content: space-between;
    }

    .posts .gallery-item {
        width: calc(50% - 1rem);
    }

    .photos .gallery {
        flex-direction: column;
        max-height: 200vmax;
    }

    .photos .gallery-item {
        width: 50%;
    }
}

@media (min-width: 1200px) {
    .posts .gallery-item {
        width: calc(100%/3 - 1rem);
    }
}

